--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </div>
 
         <footer class="footer">
-            <p>&copy; 2018 Bookmarker, Inc.</p>
+            Thanks Brad Traversy
+            <p>&copy; 2018 B00km4rker.traversymedia </p>
         </footer>
 
     </div> <!-- /container -->
